set02/problem06_compile_errors.txt
Compilation started at 10/31/2023, 11:24:37 AM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c: In function 'str_reverse':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c:27:16: warning: implicit declaration of function 'len' [-Wimplicit-function-declaration]
     int lent = len(a);
                ^~~
C:\Users\zaina\AppData\Local\Temp\cc65nk9Y.o: In function `str_reverse':
c:/Users/zaina/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz/set02/problem06.c:27: undefined reference to `len'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 10/31/2023, 11:24:39 AM
Compilation started at 10/31/2023, 11:27:42 AM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c: In function 'str_reverse':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c:27:16: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
     int lent = strlen(a);
                ^~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c:27:16: warning: incompatible implicit declaration of built-in function 'strlen'
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c:27:16: note: include '<string.h>' or provide a declaration of 'strlen'
Compilation finished at 10/31/2023, 11:27:45 AM
Compilation started at 10/31/2023, 11:45:46 AM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c: In function 'str_reverse':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c:27:15: warning: implicit declaration of function 'lenstr' [-Wimplicit-function-declaration]
     for(int i=lenstr(a);i<=0;i++)
               ^~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c:27:5: error: declaration of non-variable 'lenstr' in 'for' loop initial declaration
     for(int i=lenstr(a);i<=0;i++)
     ^~~
Compilation finished at 10/31/2023, 11:45:47 AM
Compilation started at 10/31/2023, 11:46:06 AM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c: In function 'str_reverse':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c:27:15: warning: implicit declaration of function 'lenstr' [-Wimplicit-function-declaration]
     for(int i=lenstr(a);i<=0;i++)
               ^~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c:27:5: error: declaration of non-variable 'lenstr' in 'for' loop initial declaration
     for(int i=lenstr(a);i<=0;i++)
     ^~~
Compilation finished at 10/31/2023, 11:46:07 AM
Compilation started at 10/31/2023, 11:47:10 AM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c: In function 'str_reverse':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c:27:14: warning: implicit declaration of function 'lenstr' [-Wimplicit-function-declaration]
     int lent=lenstr(a);
              ^~~~~~
C:\Users\zaina\AppData\Local\Temp\ccTzdJCv.o: In function `str_reverse':
c:/Users/zaina/github-classroom/FPC-advanced/fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz/set02/problem06.c:27: undefined reference to `lenstr'
collect2.exe: error: ld returned 1 exit status
Compilation finished at 10/31/2023, 11:47:13 AM
Compilation started at 10/31/2023, 11:48:57 AM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c: In function 'str_reverse':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c:27:16: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
     int lent = strlen(a);
                ^~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c:27:16: warning: incompatible implicit declaration of built-in function 'strlen'
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c:27:16: note: include '<string.h>' or provide a declaration of 'strlen'
Compilation finished at 10/31/2023, 11:49:00 AM
Compilation started at 10/31/2023, 11:49:39 AM
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c: In function 'str_reverse':
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c:27:16: warning: implicit declaration of function 'strlen' [-Wimplicit-function-declaration]
     int lent = strlen(a);
                ^~~~~~
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c:27:16: warning: incompatible implicit declaration of built-in function 'strlen'
c:\Users\zaina\github-classroom\FPC-advanced\fpc-advanced-classroom-1st-year-assignment-ZainabRiyaz\set02\problem06.c:27:16: note: include '<string.h>' or provide a declaration of 'strlen'
Compilation finished at 10/31/2023, 11:49:41 AM
Compilation started at 10/31/2023, 11:51:05 AM
Compilation finished at 10/31/2023, 11:51:10 AM
Compilation started at 10/31/2023, 12:03:53 PM
Compilation finished at 10/31/2023, 12:03:57 PM
Compilation started at 10/31/2023, 12:05:13 PM
Compilation finished at 10/31/2023, 12:05:15 PM
